--- a/NewX509Req.ui
+++ b/NewX509Req.ui
@@ -241,26 +241,6 @@
         </property>
     </widget>
     <widget>
-        <class>QLabel</class>
-        <property stdset="1">
-            <name>name</name>
-            <cstring>TextLabel10</cstring>
-        </property>
-        <property stdset="1">
-            <name>geometry</name>
-            <rect>
-                <x>20</x>
-                <y>50</y>
-                <width>610</width>
-                <height>70</height>
-            </rect>
-        </property>
-        <property stdset="1">
-            <name>text</name>
-            <string>Das hier wird noch eine ziemlich ausführliche Erklärung, was zu tun ist.</string>
-        </property>
-    </widget>
-    <widget>
         <class>QPushButton</class>
         <property stdset="1">
             <name>name</name>
@@ -571,6 +551,62 @@
                 <string>Land:</string>
             </property>
         </widget>
+    </widget>
+    <widget>
+        <class>QLabel</class>
+        <property stdset="1">
+            <name>name</name>
+            <cstring>TextLabel10</cstring>
+        </property>
+        <property stdset="1">
+            <name>geometry</name>
+            <rect>
+                <x>20</x>
+                <y>50</y>
+                <width>610</width>
+                <height>40</height>
+            </rect>
+        </property>
+        <property stdset="1">
+            <name>text</name>
+            <string>Das hier wird noch eine ziemlich ausführliche Erklärung, was zu tun ist.</string>
+        </property>
+    </widget>
+    <widget>
+        <class>QLabel</class>
+        <property stdset="1">
+            <name>name</name>
+            <cstring>TextLabel1_3</cstring>
+        </property>
+        <property stdset="1">
+            <name>geometry</name>
+            <rect>
+                <x>20</x>
+                <y>90</y>
+                <width>90</width>
+                <height>20</height>
+            </rect>
+        </property>
+        <property stdset="1">
+            <name>text</name>
+            <string>Beschreibung:</string>
+        </property>
+    </widget>
+    <widget>
+        <class>QLineEdit</class>
+        <property stdset="1">
+            <name>name</name>
+            <cstring>description</cstring>
+        </property>
+        <property stdset="1">
+            <name>geometry</name>
+            <rect>
+                <x>110</x>
+                <y>90</y>
+                <width>510</width>
+                <height>23</height>
+            </rect>
+        </property>
     </widget>
 </widget>
 <connections>
